# Archive

Xray-core/: go.mod  go.sum
aliyunpan/: .gitignore  README.en.md  README.md  build-all.mjs  electron-builder.json  package.json  pnpm-lock.yaml  version.mjs  vitest.config.ts
bb-api-collect/: README.md
bb-evolved/: README.md
bbdown/: README.md
brook/: README.md  tproxy_notlinux.go
clash-cfw/: README.md
clash-dotnet/: DISCLAIMER.md  README.md
clash-meta/: Makefile  android_tz.go  go.mod  go.sum  main.go
clash-meta-android/: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
clash-nyanpasu/: renovate.json
clash-verge-rev/: UPDATELOG.md
clash-verge-rev/src-tauri/src_crates/crate_mihomo_api/: Cargo.toml
clash-verge-rev/src-tauri/src_crates/crate_mihomo_api/src/: lib.rs  model.rs  sock.rs
clash-verge-rev/src-tauri/src_crates/crate_mihomo_api/src/platform/: mod.rs  unix.rs  windows.rs
clash-verge-rev/src-tauri/src_crates/crate_mihomo_api/tests/: test_mihomo_api.rs
dns-over-https/: go.mod  go.sum
downkyicore/: AGENTS.md  CHANGELOG.md  Directory.Packages.props  DownKyi.sln  README.md
filebrowser/: CHANGELOG.md
forwardproxy/: README.md  forwardproxy.go
geoip/: README.md  configuration.md  go.mod  go.sum
glider/: .gitignore  Dockerfile  README.md  feature.go  go.mod  go.sum
go-shadowsocks2/: README.md  go.mod  main.go  udp.go
hysteria/: go.work  go.work.sum
ip-scanner/: Alibaba Cloud - 中国 上海.txt  Alibaba Cloud - 中国 北京.txt  Alibaba Cloud - 中国 成都.txt  Alibaba Cloud - 中国 杭州.txt  Alibaba Cloud - 中国 深圳.txt  Alibaba Cloud - 中国 香港.txt  Alibaba Cloud - 新加坡.txt  Alibaba Cloud - 日本 东京.txt  Alibaba Cloud - 美国 斯特灵.txt  Amazon Web Services - 中国 香港.txt  BGP Network - 中国 香港.txt  China Mobile - 中国 上海.txt  China Mobile - 中国 乌鲁木齐.txt  China Mobile - 中国 南京.txt  China Mobile - 中国 合肥.txt  China Mobile - 中国 呼和浩特.txt  China Mobile - 中国 广州.txt  China Mobile - 中国 拉萨.txt  China Mobile - 中国 西安.txt  China Telecom - 中国 上海.txt  China Telecom - 中国 北京.txt  China Telecom - 中国 呼和浩特.txt  China Telecom - 中国 沈阳.txt  China Telecom - 中国 西安.txt  China Unicom - 中国 上海.txt  China Unicom - 中国 南京.txt  China Unicom - 中国 呼和浩特.txt  (+63 more)
qv2ray-qv2ray/src/plugin-interface/: CMakeLists.txt  QvGUIPluginInterface.cmake  QvGUIPluginInterface.hpp  QvPluginBase.hpp  QvPluginInterface.cmake  QvPluginInterface.hpp  QvPluginInterfaceConfig.cmake.in  QvPluginInterfaceModels.hpp  QvPluginProcessor.hpp  README.md
qv2ray-qv2ray/src/plugin-interface/utils/: HttpProxy.hpp  SocketStream.hpp
shadowsocks-libev/: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  README.md  README_pt_BR.md
shadowsocks-libev/.github/workflows/: build.yml
shadowsocks-libev/cmake/: FindCares.cmake  FindMbedTLS.cmake  FindPCRE2.cmake  FindSodium.cmake  config.h.cmake  configure.cmake  shadowsocks-libev.pc.cmake
shadowsocks-libev/debian/: changelog  control  rules
shadowsocks-libev/doc/: shadowsocks-libev.asciidoc  ss-local.asciidoc  ss-manager.asciidoc  ss-redir.asciidoc  ss-server.asciidoc  ss-tunnel.asciidoc
shadowsocks-libev/docker/alpine/: Dockerfile
shadowsocks-libev/m4/: mbedtls.m4
shadowsocks-libev/scripts/: ss-setup.sh
shadowsocks-libev/snap/: snapcraft.yaml
shadowsocks-libev/src/: CMakeLists.txt  acl.c  aead.c  crypto.c  crypto.h  json.c  local.c  manager.c  netutils.c  redir.c  rule.c  rule.h  server.c  stream.c  tunnel.c  udprelay.c
shadowsocks-libev/tests/: CMakeLists.txt  redir.json  stress_test.py  test_base64.c  test_buffer.c  test_cache.c  test_crypto.c  test_deb_build.sh  test_jconf.c  test_json.c  test_netutils.c  test_ppbloom.c  test_redir_qemu.sh  test_rule.c  test_ss_setup.sh  test_utils.c
shadowsocks-libev/tests/qemu/: guest-init.sh
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/: CMakeLists.txt  LICENSE  README.md
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/cmake/: QvPluginInterfaceConfig.cmake.in  QvPluginInterfaceMacros.cmake
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/connections/: ConnectionsBase.hpp  ConnectionsBaseTypes.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/gui/: QvGUIPluginInterface.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/handlers/: EventHandler.hpp  KernelHandler.hpp  OutboundHandler.hpp  SubscriptionHandler.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/include/QvPlugin/: PluginInterface.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/include/QvPlugin/Common/: CommonSafeType.hpp  CommonTypes.hpp  EditorCreatorDefs.hpp  QvPluginBase.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/include/QvPlugin/Connections/: ConnectionsBase.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/include/QvPlugin/Gui/: QvGUIPluginInterface.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/include/QvPlugin/Handlers/: EventHandler.hpp  IProfilePreprocessor.hpp  KernelHandler.hpp  LatencyTestHandler.hpp  OutboundHandler.hpp  SubscriptionHandler.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/include/QvPlugin/Socksify/: HttpProxy.hpp
ssnet-qv2ray/src/Qv2rayBase/src/PluginInterface/include/QvPlugin/Utils/: BindableProps.hpp  ForEachMacros.hpp  INetworkRequestHelper.hpp  JsonConversion.hpp  QJsonIO.hpp
ssnet-qv2ray/src/plugins/routingA/core/: CMakeLists.txt  LICENSE  README.md  example.hpp  libRoutingA-ActionTable.cpp  libRoutingA.cpp  libRoutingA.hpp  main.cpp
suyu/src/android/app/src/main/jni/: CMakeLists.txt  android_config.cpp  android_config.h  android_settings.cpp  android_settings.h  game_metadata.cpp  native.cpp  native.h  native_config.cpp  native_input.cpp  native_log.cpp
suyu/src/android/app/src/main/jni/emu_window/: emu_window.cpp  emu_window.h
suyu/src/dedicated_room/: CMakeLists.txt  suyu_room.cpp  suyu_room.rc
suyu/src/suyu_cmd/: CMakeLists.txt  precompiled_headers.h  sdl_config.cpp  sdl_config.h  suyu.cpp  suyu.rc
suyu/src/suyu_cmd/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h  emu_window_sdl2_gl.cpp  emu_window_sdl2_gl.h  emu_window_sdl2_null.cpp  emu_window_sdl2_null.h  emu_window_sdl2_vk.cpp  emu_window_sdl2_vk.h
v2rayng/libancillary/: CMakeLists.txt
(+4582 files in other folders)
