[package]
name = "mihomo_api"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["http1", "client"] }
hyper-util = "0.1.11"
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread", "io-std", "net", "io-util", "time"] }
tokio-util = { version = "0.7.14", features = ["codec"] }

[dev-dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"

[target.'cfg(unix)'.dependencies]
hyperlocal = "0.9.1"
